@@ -1,3 +1,8 @@
+Tue Mar 24 14:44:07 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
+
+	* xappy/searchconnection.py: Catch DatabaseModifiedError in
+	  get_metadata(), and reopen and retry.
+
 Wed Mar 11 15:28:38 GMT 2009  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/introduction.rst,xappy/unittests/general1.py,
